--- a/src/details.html
+++ b/src/details.html
@@ -8,6 +8,7 @@
     <meta name="description" content="网易严选秉承网易一贯的严谨态度，深入世界各地，严格把关所有商品的产地、工艺、原材料，甄选居家、厨房、饮食等各类商品，力求给你最优质的商品。" />
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/details.css">
+    <script src="script/require.js" defer async="true" data-main="script/detailsmain.js"></script>
 </head>
 
 <body>
@@ -123,7 +124,7 @@
                 <i class="next"></i>
             </span>
             <span>
-                <span class="crumb-name ">流浪地球</span>
+                <span class="CrumbName "></span>
             </span>
         </div>
         <!-- 商品图片和选购 -->
@@ -135,33 +136,12 @@
                     <!-- 待放大的小图 -->
                     <div class="smallpic">
                         <img class="thumbImg"
-                            src="https://yanxuan-item.nosdn.127.net/1bb1caee7d8f21eceb28532f9c706035.jpg?imageView&amp;thumbnail=430x430&amp;quality=95">
+                            src="">
                     </div>
                 </div>
                 <!-- 待展示小图片列表 -->
                 <div class="piclist">
-                    <ul>
-                        <li>
-                            <a href="javascript:;" style="margin-left:0">
-                                <img
-                                    src="https://yanxuan-item.nosdn.127.net/bd3cd5f04b813824b15207c6633940e1.png?imageView&amp;thumbnail=78x78&amp;quality=95"></a>
-                        </li>
-                        <li>
-                            <a href="javascript:;">
-                                <img
-                                    src="https://yanxuan-item.nosdn.127.net/fd5a590e173c66a66e7879a44924ba0c.jpg?imageView&amp;thumbnail=78x78&amp;quality=95"></a>
-                        </li>
-                        <li>
-                            <a href="javascript:;">
-                                <img
-                                    src="https://yanxuan-item.nosdn.127.net/1bb1caee7d8f21eceb28532f9c706035.jpg?imageView&amp;thumbnail=78x78&amp;quality=95"></a>
-                        </li>
-                        <li>
-                            <a href="javascript:;">
-                                <img
-                                    src="https://yanxuan-item.nosdn.127.net/8b0dc28ee09cff9d2081bd05123ab69d.png?imageView&amp;thumbnail=78x78&amp;quality=95"></a>
-                        </li>
-                    </ul>
+                
                 </div>
             </div>
             <!-- 右侧选购加购物车 -->
@@ -170,10 +150,10 @@
                 <div class="intro">
                     <!-- 商品名称 -->
                     <div class="pro-name" style="padding-right:0px;">
-                        <span>流浪地球</span>
+                        <span></span>
                     </div>
                     <!-- 商品简要描述 -->
-                    <div class="desc">科幻世界出品刘慈欣短篇小说精选，辑录“散落在三体之外的刘慈欣宇宙”</div>
+                    <div class="desc"></div>
                 </div>
                 <!-- 价格服务部分整体 -->
                 <div class="u-formctr">
@@ -184,7 +164,7 @@
                             <span class="label label-1">价格</span>
                             <span class="rmbnum">
                                 <span class="rmb">￥</span>
-                                <span class="num">49.8</span>
+                                <span class="num"></span>
                             </span>
 
                         </div>
