--- a/src/details.html
+++ b/src/details.html
@@ -274,7 +274,7 @@
                     <!-- 购买和购物车 -->
                     <div class="cartbtns">
                         <!-- 立即购买按钮 -->
-                        <a class="nowbuy selfbtn" href="javascript:;">
+                        <a class="nowbuy selfbtn" href="http://10.31.155.25/yanxuan/src/cart.html" target='_blank'>
                             <span>立即购买</span>
                         </a>
                         <!-- 加入购物车 -->
