--- a/src/index.html
+++ b/src/index.html
@@ -356,7 +356,7 @@
                     <!--编辑推荐和热销总榜Tab切换  -->
                     <div class="commonTab">
                         <ul>
-                            <li class="tuijian ">
+                            <li class="tuijian  ">
                                 <a href="javascript:;" class=" edit Tabactive">编辑推荐</a>
                             </li>
                             <li class="tuijian ">
@@ -373,9 +373,9 @@
                 </div>
             </div>
             <!-- 商品区域 -->
-            <div class="showContainer">
-                <!-- 左侧商品 -->
-           
+            <div class='showContainer SH-1'> 
+            </div>
+            <div class='showContainer SH-2'> 
             </div>
         </div>
     </div>
@@ -2693,8 +2693,24 @@
         </div>
     </div>
 
-
-
+<!-- 左侧楼梯导航 -->
+<div class="LeftLouTi" >
+    <ul>
+        <li class="selectnow Scroll"><span>新品首发</span></li>
+        <li class="Scroll"><span>人气推荐</span></li>
+        <li class="Scroll"><span>限时购</span></li>
+        <li class="Scroll"><span>福利社</span></li>
+        <li><span>居家生活</span></li>
+        <li><span>服饰鞋包</span></li>
+        <li><span>美食酒水</span></li>
+        <li><span>个护清洁</span></li>
+        <li><span>母婴亲子</span></li>
+        <li><span>运动旅行</span></li>
+        <li><span>数码家电</span></li>
+        <li><span>全球特色</span></li>
+        <li class="returntop Scroll">回到顶部</li>
+    </ul>
+</div>
 
 
 
