--- a/src/cart.html
+++ b/src/cart.html
@@ -8,6 +8,7 @@
     <meta name="description" content="网易严选秉承网易一贯的严谨态度，深入世界各地，严格把关所有商品的产地、工艺、原材料，甄选居家、厨房、饮食等各类商品，力求给你最优质的商品。" />
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/cart.css">
+    <script src="script/require.js" defer async="true" data-main="script/cartmain.js"></script>
 </head>
 
 <body>
@@ -143,8 +144,14 @@
 
                 <!-- 购物车主体（空时） -->
                 <div class="cart-empty">
+
+                    <!-- 购物车列表 -->
+
+                    <div class="CartList"></div>
+
+
                     <!-- 中心内容区域 -->
-                    <div class="m-emptyStatus " style="margin-top:200px;">
+                    <div class="m-emptyStatus " style="margin-top:200px;display:none;">
                         <!-- 购物车图片 -->
                         <div class="emptyCartImg"></div>
                         <div class="emptyText">购物车还是空滴</div>
