--- a/src/details.html
+++ b/src/details.html
@@ -86,7 +86,7 @@
             </div>
             <div class="logo-bottom">
                 <ul class="navleft">
-                    <li><a href="" class="navkey"
+                    <li><a href="http://10.31.155.25/yanxuan/src/index.html" class="navkey"
                             style="margin-left:0;border-bottom:3px solid #b4a078;color:#b4a078;">首页</a></li>
                     <li><a href="" class="navkey">居家生活</a></li>
                     <li><a href="" class="navkey">服饰鞋包</a></li>
@@ -135,9 +135,14 @@
                 <div class="picswrap">
                     <!-- 待放大的小图 -->
                     <div class="smallpic">
-                        <img class="thumbImg"
-                            src="">
+                        <img class="thumbImg" src="">
+                        <!-- 小的放大镜区域 -->
+                        <div id="small"></div>
                     </div>
+                </div>
+                <!-- 放大的图片 -->
+                <div class='BigPic'>
+                    <img src='' alt='' id='big'>
                 </div>
                 <!-- 待展示小图片列表 -->
                 <div class="piclist">
