--- a/src/cart.html
+++ b/src/cart.html
@@ -8,7 +8,9 @@
     <meta name="description" content="网易严选秉承网易一贯的严谨态度，深入世界各地，严格把关所有商品的产地、工艺、原材料，甄选居家、厨房、饮食等各类商品，力求给你最优质的商品。" />
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/cart.css">
-    <script src="script/require.js" defer async="true" data-main="script/cartmain.js"></script>
+    <!-- 引入主模块 -->
+    <script src="script/require.js" data-main="script/config.js" id="current-page" target-module="script/cartmain.js" defer async="true" ></script>
+   
 </head>
 
 <body>
