--- a/src/register.html
+++ b/src/register.html
@@ -8,7 +8,9 @@
     <meta name="description" content="网易严选秉承网易一贯的严谨态度，深入世界各地，严格把关所有商品的产地、工艺、原材料，甄选居家、厨房、饮食等各类商品，力求给你最优质的商品。" />
 
     <link rel="stylesheet" href="css/register.css">
-    <script src="script/require.js" defer async="true" data-main="script/registermain.js"></script>
+
+  <script src="script/require.js" data-main="script/config.js" id="current-page" target-module="script/registermain.js" defer async="true" ></script>
+   
 
 </head>
 
